# strauss

./: .gitignore  Cargo.toml  Gemfile  GitVersion.yml  README.md  docker-compose.gha.yml  docker-compose.mockserver.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.val.yml  docker-compose.yml  strauss-build.debug.yml  strauss-build.release.yml  strauss-build.yml  strauss.env.sh  strauss.gitaction.env.sh  strauss.prod.env.sh
.github/workflows/: nats-server-deploy.yml  nats-server-validate.yml  strauss-deploy.yml  strauss-dev-check-commit.yml  strauss-staging.yml  strauss-start-staging.yml  strauss-validate.yml
lib/: Cargo.toml
lib/src/: config.rs  lib.rs  redisclient.rs
lib/src/twitch/: chat.rs  config.rs  mod.rs
mockserver/: Dockerfile  initializerJson.json  mockserver.properties
scripts/: deploy.sh  docker-install-prep.sh  entrypoint.val.sh  gen-dev-env.sh  gen-gha-env.sh  gen-prod-env.sh  package.sh
services/admin/: README.md
services/chat/: Cargo.toml  Dockerfile  env.rb
services/chat/src/: chatclient.rs  main.rs
services/nats-server/: nats-server.yml
system/: docker-network-create.service  strauss-compose.yml
tests/: docker-compose.yml
tests/chat/: Dockerfile  run.rb
tests/debug/: run.rb
tests/kafka/: config.ini  run.py
tests/redis/: Dockerfile  run.rb
