[workspace]
members = ["services/chat", "lib"]
default-members = ["services/chat", "lib"]

[workspace.package]
authors = ["Squidpie"]
edition = "2021"

[workspace.dependencies]
strausslib = { path = "lib/" }
redis = {version = "0.22.3", features = ["tokio-comp"]}
async-trait = "0.1.64"
mockall = "0.11.3"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"
tokio =  { version = "1.25.0", features = ["rt-multi-thread"] }
twitch-irc = { version = "5.0.0", features = ["with-serde"] }