[package]
name = "strauss-chat"
version = "0.1.4"
edition.workspace = true
authors.workspace = true

[[bin]]
name = "chat"
path = "src/main.rs"

[dependencies]
strausslib.workspace = true
redis.workspace = true
serde_yaml.workspace = true
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.91"
twitch-irc = { version = "5.0.0", features = ["with-serde"] }
tokio = { version = "1.25.0", features = ["rt-multi-thread"] }

