[package]
name = "strauss-chat"
version = "0.1.4"
edition.workspace = true
authors.workspace = true

[[bin]]
name = "chat"
path = "src/main.rs"

[dependencies]
strausslib.workspace = true
redis.workspace = true
serde_yaml.workspace = true
mockall.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
twitch-irc = { version = "5.0.0", features = ["with-serde"] }
